--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Login Page by Sillyr</title>
     <link rel="stylesheet" href="loginpage.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="loginpage.js"></script>
 </head>
 
 <body>
@@ -13,11 +14,11 @@
         <form action="">
             <h1>Login</h1>
             <div class="input-box">
-                <input type="text" placeholder="Username" required>
+                <input type="text" placeholder="Username" required id="username">
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
-                <input type="password" placeholder="Password" required>
+                <input type="password" placeholder="Password" required id="password">
                 <i class='bx bxs-lock' ></i>
             </div>
 
@@ -26,7 +27,7 @@
                 <a href="#">Forgot password?</a>
             </div>
 
-            <button type="submit" class="btn">Login</button>
+            <button type="submit" class="btn" id="loginButton">Login</button>
 
             <div class="register-link">
                 <p>Don't have an account? <a href="#">Register</a></p>
